--- a/Exercise3/Resources/layout/Simple_Item.axml
+++ b/Exercise3/Resources/layout/Simple_Item.axml
@@ -2,18 +2,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minWidth="25px"
-        android:minHeight="25px">
+        android:minHeight="25px"
+        android:padding="@dimen/cardview_compat_inset_shadow"
+        android:layout_margin="@dimen/cardview_default_radius">
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/linearLayout1"
-            android:layout_margin="@dimen/abc_action_bar_overflow_padding_end_material">
+            android:layout_margin="@dimen/abc_action_bar_overflow_padding_end_material"
+            android:padding="@dimen/cardview_default_elevation">
             <ImageView
                 android:src="@android:drawable/ic_menu_gallery"
                 android:layout_width="wrap_content"
